# NetherLink

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md  VIDEO_CALL_IMPLEMENTATION_SUMMARY.md  VIDEO_CALL_INTEGRATION.md  WEBSOCKET_API.md  build.cmd  doc.bat  format.bat
.github/workflows/: build.yml
doc/: UI_ENHANCEMENT_QUICK_REFERENCE.md  UI_ENHANCEMENT_SUMMARY.md  VIDEO_CALL_UI_UPDATE_LOG.md  WEBRTC_JWT_AUTHENTICATION.md
examples/: video_call_integration_example.cpp  video_call_window.cc
include/Components/: ClickableLabel.h  CustomPushButton.h  CustomScrollArea.h  CustomTooltip.h  FloatingInputBar.h  LineEditComponent.h  ScrollAreaNoWheel.h  ScrollBarThumb.h  SmoothScrollBar.h  SmoothScrollWidget.h  TopSearchWidget.h  TransparentMenu.h
include/Data/: AiChatRepository.h  AvatarLoader.h  CurrentUser.h  DatabaseManager.h  GroupRepository.h  MessageData.h  MessageRepository.h  UserRepository.h
include/Entity/: ChatMessage.h  Group.h  Post.h  User.h
include/Manager/: VideoCallManager.h
include/Network/: NetworkConfig.h  NetworkManager.h
include/View/AiChat/: AiChatApplication.h  AiChatItemDelegate.h  AiChatListItem.h  AiChatListModel.h  AiChatListView.h  AiChatListWidget.h  AiChatMessage.h  AiChatWebSocket.h  AiChatWindow.h
include/View/Call/: IncomingCallDialog.h  VideoCallDialog.h
include/View/Chat/: ChatArea.h  ChatItemDelegate.h  ChatListModel.h  ChatListView.h  MessageHandler.h  MessageListItem.h  NewMessageNotifier.h  NotificationBadge.h  VideoCallWidget.h
include/View/Friend/: ApplyWindow.h  FriendApplication.h  FriendItemDelegate.h  FriendListModel.h  FriendListView.h  FriendListWidget.h  NotificationItem.h  NotificationListItem.h  NotificationListWidget.h  NotificationPage.h  SearchFriendWindow.h  SearchResultItem.h  SearchResultList.h  SearchTypeTab.h
include/View/Mainwindow/: ApplicationBar.h  ApplicationBarItem.h  DefaultPage.h  MainWindow.h  NotificationManager.h  Register.h  TextBarItem.h
include/View/Post/: PostApplication.h  PostApplicationBar.h  PostCreatePage.h  PostDetailView.h  PostFeedPage.h  PostPreviewItem.h
include/WebRTC/: call_coordinator.h  icall_observer.h  signalclient.h
res/: res.qrc
res/data/: client.db  network_config.json  user.db
src/: main.cpp
src/Components/: ClickableLabel.cpp  CustomPushButton.cpp  CustomScrollArea.cpp  CustomTooltip.cpp  FloatingInputBar.cpp  LineEditComponent.cpp  ScrollAreaNoWheel.cpp  ScrollBarThumb.cpp  SmoothScrollBar.cpp  SmoothScrollWidget.cpp  TopSearchWidget.cpp  TransparentMenu.cpp
src/Data/: AiChatRepository.cpp  AvatarLoader.cpp  CurrentUser.cpp  DatabaseManager.cpp  GroupRepository.cpp  MessageRepository.cpp  UserRepository.cpp
src/Manager/: VideoCallManager.cpp
src/Network/: NetworkConfig.cpp  NetworkManager.cpp
src/Utils/: FramelessWindow.cpp  WindowEffect.cpp
src/View/AiChat/: AiChatApplication.cpp  AiChatItemDelegate.cpp  AiChatListItem.cpp  AiChatListModel.cpp  AiChatListView.cpp  AiChatListWidget.cpp  AiChatWebSocket.cpp  AiChatWindow.cpp
src/View/Call/: IncomingCallDialog.cpp  VideoCallDialog.cpp
src/View/Chat/: ChatArea.cpp  ChatItemDelegate.cpp  ChatListModel.cpp  ChatListView.cpp  MessageApplication.cpp  MessageHandler.cpp  MessageListItem.cpp  MessageListWidget.cpp  NewMessageNotifier.cpp  NotificationBadge.cpp  VideoCallWidget.cpp
src/View/Friend/: ApplyWindow.cpp  FriendApplication.cpp  FriendItemDelegate.cpp  FriendListModel.cpp  FriendListView.cpp  FriendListWidget.cpp  NotificationItem.cpp  NotificationListItem.cpp  NotificationListWidget.cpp  NotificationPage.cpp  SearchFriendWindow.cpp  SearchResultItem.cpp  SearchResultList.cpp  SearchTypeTab.cpp
src/View/Mainwindow/: ApplicationBar.cpp  ApplicationBarItem.cpp  DefaultPage.cpp  Login.cpp  NotificationManager.cpp  Register.cpp
src/View/Post/: PostApplication.cpp  PostApplicationBar.cpp  PostCreatePage.cpp  PostDetailView.cpp  PostFeedPage.cpp  PostPreviewItem.cpp
src/WebRTC/: call_coordinator.cc  callmanager.cc  conductor.cc  mainwindow.cc  peer_connection_client.cc  signalclient.cc  test_impl.cc  videorenderer.cc  webrtcengine.cc
tool/Uncrustify/: uncrustify.cfg
